networkPolicy/deny_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: < namespace_name >
spec:
  podSelector: {}
  policyTypes:
  - Ingress
